# h265-transcoder

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: lint.yml
docker/: Dockerfile  docker-compose.yaml
h265_converter/: __init__.py  __main__.py  config.py  interfaces.py  schema.sql  tasks.py
h265_transcoder/: __init__.py  __main__.py  config.py  interfaces.py  log.py  schema.sql  tasks.py
